--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container text-center">
-        <div class="row">
+    <div class="container">
+        <div class="row text-center">
             <div class="col">
                 <h1>Hi, my name is Yuse.</h1>
                 <h3>I specialize in marketing and outreach.</h3>
+                <p>Oh, and I love Airtable!</p>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <h3>Process</h3>
+                <h4>Experience</h4>
+            </div>
+            <div class="col">
+                <h4>Education</h4>
+            </div>
+            <div class="col">
+                <h4>Examples</h4>
+            </div>
+            <div class="col">
+                <h4>Skills</h4>
+                <iframe class="airtable-embed" src="https://airtable.com/embed/app2ihwfXrjpYnFBi/shrgvvUJQIQJpLujs?backgroundColor=gray" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
             </div>
         </div>
     </div>
