--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
             <div class="col">
                 <h4>Experience</h4>
             </div>
+        </div>
+        <div class="row">
             <div class="col">
                 <h4>Education</h4>
             </div>
+        </div>
+        <div class="row">
             <div class="col">
                 <h4>Examples</h4>
             </div>
+        </div>
+        <div class="row">
             <div class="col">
                 <h4>Skills</h4>
                 <iframe class="airtable-embed" src="https://airtable.com/embed/app2ihwfXrjpYnFBi/shrgvvUJQIQJpLujs?backgroundColor=gray" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
