--- a/index.html
+++ b/index.html
@@ -12,12 +12,50 @@
             <div class="col">
                 <h1>Hi, my name is Yuse.</h1>
                 <h3>I specialize in marketing and outreach.</h3>
-                <p>Oh, and I love Airtable!</p>
             </div>
         </div>
         <div class="row">
             <div class="col">
                 <h4>Experience</h4>
+                <div class="accordion" id="accordionExperience">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          AGRU America, Inc.
+                        </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExperience">
+                        <div class="accordion-body">
+                          <strong>Head of Marketing</strong>
+                          <p>Revitalized a mature business by incorporating technology, modern marketing techniques, cost-effective campaigns, and goal-oriented team building.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          Tunnyl
+                        </button>
+                      </h2>
+                      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExperience">
+                        <div class="accordion-body">
+                          <strong>Founder</strong>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          Science/AAAS
+                        </button>
+                      </h2>
+                      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExperience">
+                        <div class="accordion-body">
+                          <strong>Copyeditor</strong>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </div>
         <div class="row">
@@ -33,7 +71,6 @@
         <div class="row">
             <div class="col">
                 <h4>Skills</h4>
-                <iframe class="airtable-embed" src="https://airtable.com/embed/app2ihwfXrjpYnFBi/shrgvvUJQIQJpLujs?backgroundColor=gray" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
             </div>
         </div>
     </div>
