--- a/index.html
+++ b/index.html
@@ -7,70 +7,86 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <div class="row text-center">
+    <div class="container p-4">
+        <div class="row text-center mb-4">
             <div class="col">
-                <h1>Hi, my name is Yuse.</h1>
-                <h3>I specialize in marketing and outreach.</h3>
+                <h1 class="display-5">Hi, my name is Yuse.</h1>
+                <h5>I specialize in marketing and outreach.</h5>
+                <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <h4>Experience</h4>
-                <div class="accordion" id="accordionExperience">
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                          AGRU America, Inc.
-                        </button>
-                      </h2>
-                      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExperience">
-                        <div class="accordion-body">
-                          <strong>Head of Marketing</strong>
-                          <p>Revitalized a mature business by incorporating technology, modern marketing techniques, cost-effective campaigns, and goal-oriented team building.</p>
+            <div class="col-sm-4 mb-4">
+                <div id="nav-list" class="list-group">
+                    <a class="list-group-item list-group-item-action" href="#list-item-1">Experience</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-2">Education</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-3">Projects</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-4">Skills</a>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div data-bs-spy="scroll" data-bs-target="#nav-list" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+                    <div class="row" id="list-item-1">
+                        <div class="col">
+                            <h4>Experience</h4>
+                            <div class="accordion mb-2" id="accordionExperience">
+                                <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    AGRU America, Inc.
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExperience">
+                                    <div class="accordion-body">
+                                    <strong>Head of Marketing</strong>
+                                    <p>Revitalized a mature business by incorporating technology, modern marketing techniques, cost-effective campaigns, and goal-oriented team building.</p>
+                                    </div>
+                                </div>
+                                </div>
+                                <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Tunnyl
+                                    </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExperience">
+                                    <div class="accordion-body">
+                                    <strong>Founder</strong>
+                                    </div>
+                                </div>
+                                </div>
+                                <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Science/AAAS
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExperience">
+                                    <div class="accordion-body">
+                                    <strong>Copyeditor</strong>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
                         </div>
-                      </div>
                     </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          Tunnyl
-                        </button>
-                      </h2>
-                      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExperience">
-                        <div class="accordion-body">
-                          <strong>Founder</strong>
+                    <div class="row" id="list-item-2">
+                        <div class="col">
+                            <h4>Education</h4>
+            
                         </div>
-                      </div>
                     </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          Science/AAAS
-                        </button>
-                      </h2>
-                      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExperience">
-                        <div class="accordion-body">
-                          <strong>Copyeditor</strong>
+                    <div class="row" id="list-item-3">
+                        <div class="col">
+                            <h4>Examples</h4>
                         </div>
-                      </div>
                     </div>
-                  </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <h4>Education</h4>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <h4>Examples</h4>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <h4>Skills</h4>
+                    <div class="row" id="list-item-4">
+                        <div class="col">
+                            <h4>Skills</h4>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
