--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container p-4">
-        <div class="row text-center mb-4">
+        <div class="row mb-4">
             <div class="col">
                 <h1 class="display-5">Hi, my name is Yuse.</h1>
-                <h5>I specialize in marketing and outreach.</h5>
+                <h6>Award-winning, full-stack marketing and outreach leader with over 14 years of experience delivering results.</h6>
                 <hr>
             </div>
         </div>
@@ -23,10 +23,12 @@
                     <a class="list-group-item list-group-item-action" href="#list-item-3">Projects</a>
                     <a class="list-group-item list-group-item-action" href="#list-item-4">Skills</a>
                 </div>
+                <hr>
+                <p><strong>E-mail: </strong>yuseL@me.com</p>
             </div>
             <div class="col-sm-8">
                 <div data-bs-spy="scroll" data-bs-target="#nav-list" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-                    <div class="row" id="list-item-1">
+                    <div class="row mb-4" id="list-item-1">
                         <div class="col">
                             <h4>Experience</h4>
                             <div class="accordion mb-2" id="accordionExperience">
@@ -38,8 +40,41 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExperience">
                                     <div class="accordion-body">
-                                    <strong>Head of Marketing</strong>
-                                    <p>Revitalized a mature business by incorporating technology, modern marketing techniques, cost-effective campaigns, and goal-oriented team building.</p>
+                                        <strong>Head of Marketing</strong>
+                                        <p>2017 - Present</p>
+                                        <p>Executes AGRU America’s by combining the best inbound and outbound marketing techniques with a world-class team to achieve results.</p>
+                                        <ul>
+                                            <li>
+                                                Manages an SEO-driven content marketing campaign with industry-leading articles, videos, webinars, illustrations, and podcasts.
+                                            </li>
+                                            <li>
+                                                Leads outreach by building relationships with key officials from government, associations, and business partners.
+                                            </li>
+                                            <li>
+                                                Leads HubSpot usage and collaboration between marketing, sales, and product groups. Manages a highly connected system with the ability to track ROI, value of conversions, and more.
+                                            </li>
+                                            <li>
+                                                Manages a growing team to drive organic and paid social media growth.
+                                            </li>
+                                            <li>
+                                                Oversees deployment of staff to engage over 30 strategic membership associations.
+                                            </li>
+                                            <li>
+                                                Oversees an aggressive 80+ annual trade shows and events as part of the business’ core sales/marketing strategy.
+                                            </li>
+                                            <li>
+                                                Collaborates closely with sales, technology, and product teams to define and execute a successful go-to-market strategy.
+                                            </li>
+                                            <li>
+                                                Supports employee engagement and incentives through innovative campaigns and programs.
+                                            </li>
+                                            <li>
+                                                Engages freelancers to support content creation machine.
+                                            </li> 
+                                            <li>
+                                                Defines marketing goals and budgets, delivering year-over-year improvements, awards, and new milestones.
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
                                 </div>
@@ -52,6 +87,7 @@
                                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExperience">
                                     <div class="accordion-body">
                                     <strong>Founder</strong>
+                                    <p>Soft-launched an experimental B2C web platform in Hong Kong targeting the future of work. The company’s vision was to create better tools for a remote workforce centered around team building and a flexible payment system (cash and payments-in-kind). Reached 100 users and over $20,000 in revenue on a shoestring budget; ran multiple successful pilot projects in Austin and Hong Kong.</p>
                                     </div>
                                 </div>
                                 </div>
@@ -64,21 +100,32 @@
                                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExperience">
                                     <div class="accordion-body">
                                     <strong>Copyeditor</strong>
+                                    <p>Copyedited and proofed all written content produced by the Science/AAAS business office. Edited line advertisements, performed quality control on the Science websites, copyedited the career and technology features, maintained the business office style guide, and maximized the impact of all site licensing marketing content.</p>
                                     </div>
                                 </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row" id="list-item-2">
+                    <div class="row mb-4" id="list-item-2">
                         <div class="col">
                             <h4>Education</h4>
-            
+                            <h6 class="mb-0">2024 | Washington, DC</h6>
+                            <strong>CMO Program</strong>
+                            <p>Quantic School of Business and Technology</p>
+                            <hr>
+                            <h6 class="mb-0">2019 | Washington, DC</h6>
+                            <strong>Executive Master of Business Administration</strong>
+                            <p>Quantic School of Business and Technology</p>
+                            <hr>
+                            <h6 class="mb-0">2010 | Washington, DC</h6>
+                            <strong>Bachelor of Science, Human Science</strong>
+                            <p>Georgetown University</p>
                         </div>
                     </div>
                     <div class="row" id="list-item-3">
                         <div class="col">
-                            <h4>Examples</h4>
+                            <h4>Projects</h4>
                         </div>
                     </div>
                     <div class="row" id="list-item-4">
